# aiofetch

./: LICENSE.md  README.md  aiologger.py  crawling.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
src/aiofetch/: __init__.py  aiologger.py  crawler.py  downloader.py  downloading.py  file_handling.py  logger.py  parsing.py  utils.py
src/aiofetch/logger/: __init__.py  logger.py
tests/: conftest.py  test_content_parser.py  test_metadata.py
