[project]
name = "aiofetch"
version = "1.0.0"
dependencies = [
]
requires-python = ">=3.10"
authors = [
  {name = "Akram Rakhmetulla", email = "akram042006@gmail.com"}
]
maintainers = [
  {name = "Akram Rakhmetulla", email = "akram042006@gmail.com"}
]
description = "Collection of different tools for async web scraping, crawling and parsing"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Homepage = "https://github.com/spike1236/aiofetch"
Issues = "https://github.com/spike1236/aiofetch/issues"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W"]