[project]
name = "aiofetch"
version = "0.0.6"
dependencies = [
  "aiohttp",
  "bs4",
  "aiofiles"
]
requires-python = ">=3.9"
authors = [
  {name = "Akram Rakhmetulla", email = "akram042006@gmail.com"}
]
maintainers = [
  {name = "Akram Rakhmetulla", email = "akram042006@gmail.com"}
]
description = "Collection of different tools for async web scraping, crawling and parsing"
readme = "README.md"
license = {file = "LICENSE.md"}

classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/spike1236/aiofetch"
Issues = "https://github.com/spike1236/aiofetch/issues"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W"]